diesel_derives/src/tests/snapshots/diesel_derives__tests__declare_sql_function_window_1.snap
---
source: diesel_derives/src/tests/mod.rs
expression: out
info:
  input: "#[diesel::declare_sql_function]\nextern \"SQL\" {\n    #[window]\n    fn row_number() -> BigInt;\n}\n"
---
#[allow(non_camel_case_types)]
pub fn row_number() -> row_number {
    row_number_utils::row_number {}
}
#[allow(non_camel_case_types, non_snake_case)]
///The return type of [`row_number()`](fn@row_number)
pub type row_number = row_number_utils::row_number;
#[doc(hidden)]
#[allow(non_camel_case_types, non_snake_case, unused_imports)]
pub(crate) mod row_number_utils {
    use diesel::{self, QueryResult};
    use diesel::expression::{
        AsExpression, Expression, SelectableExpression, AppearsOnTable, ValidGrouping,
    };
    use diesel::query_builder::{QueryFragment, AstPass};
    use diesel::sql_types::*;
    use diesel::internal::sql_functions::*;
    use super::*;
    #[derive(Debug, Clone, Copy, diesel::query_builder::QueryId)]
    pub struct row_number {}
    ///The return type of [`row_number()`](fn@row_number)
    pub type HelperType = row_number;
    impl Expression for row_number {
        type SqlType = BigInt;
    }
    impl<__DieselInternal> SelectableExpression<__DieselInternal> for row_number
    where
        Self: AppearsOnTable<__DieselInternal>,
    {}
    impl<__DieselInternal> AppearsOnTable<__DieselInternal> for row_number
    where
        Self: Expression,
    {}
    impl<__DieselInternal> FunctionFragment<__DieselInternal> for row_number
    where
        __DieselInternal: diesel::backend::Backend,
    {
        const FUNCTION_NAME: &'static str = "row_number";
        #[allow(unused_assignments)]
        fn walk_arguments<'__b>(
            &'__b self,
            mut out: AstPass<'_, '__b, __DieselInternal>,
        ) -> QueryResult<()> {
            let mut needs_comma = false;
            Ok(())
        }
    }
    impl<
        __P,
        __O,
        __F,
        __DieselInternal,
    > WindowFunctionFragment<row_number, __DieselInternal> for OverClause<__P, __O, __F>
    where
        __DieselInternal: diesel::backend::Backend,
    {}
    impl IsWindowFunction for row_number {
        type ArgTypes = ();
    }
}
